--- a/Professores/index.html
+++ b/Professores/index.html
@@ -10,8 +10,8 @@
    <header class="cabeçalho">
       <img class="cabeçalho-imagem" src="la salle .png" alt="la salle">   
    <ul>
-      <a href="file:///C:/Users/Jo%C3%A3o%20Pedro/Downloads/escola/2D2024-main/index.html"><li class="lista">Menu</li></a>
-      <a href="file:///C:/Users/Jo%C3%A3o%20Pedro/Downloads/escola/2D2024-main/alunos/index.html"><li class="lista">Estudantes</li></a>
+      <a href="file:///tmp/guest-s4ttkj/Downloads/SIte-Escola-main/index.html"><li class="lista">Menu</li></a>
+      <a href="file:///tmp/guest-s4ttkj/Downloads/SIte-Escola-main/alunos/index.html"><li class="lista">Estudantes</li></a>
    </ul>
    </header>
 
@@ -25,79 +25,73 @@
   <div class="todos-estudantes">
        <div class="estudante-div">
           <img class="estudante-foto" src="sem foto.png" alt="Alan Victor Drabeski">
-          <h3 class="estudante-nome">Alan Victor Drabeski</h3>
+          <h3 class="estudante-nome">Adonay Jose De Oliveira Junior</h3>
           <img class="icone-redes-sociais" src="instagram.png" alt="instagram">
           <img class="icone-redes-sociais" src="facebook.png" alt="facebook">
       </div>
           <div class="estudante-div">
           <img class="estudante-foto" src="sem foto.png" alt="Allana do Nascimento Camargo">
-          <h3 class="estudante-nome">Allana do Nascimento Camargo</h3>
+          <h3 class="estudante-nome">Ana Crstina Cougo Guterre Jacobini</h3>
           <img class="icone-redes-sociais" src="instagram.png" alt="instagram">
           <img class="icone-redes-sociais" src="facebook.png" alt="facebook">
        </div>
        <div class="estudante-div">
           <img class="estudante-foto" src="sem foto.png" alt="Arthur Dranka Colaco">
-          <h3 class="estudante-nome">Arthur Dranka Colaco</h3>
+          <h3 class="estudante-nome">Daniel Nicolas Guimaraes Voch</h3>
           <img class="icone-redes-sociais" src="instagram.png" alt="instagram">
           <img class="icone-redes-sociais" src="facebook.png" alt="facebook">
        </div>
           <div class="estudante-div">
           <img class="estudante-foto" src="sem foto.png" alt="Amanda Westphalen Ferreira Padilha">
-          <h3 class="estudante-nome">Amanda Westphalen Ferreira Padilha</h3>
+          <h3 class="estudante-nome">Giovanni Becker Da silva</h3>
           <img class="icone-redes-sociais" src="instagram.png" alt="instagram">
           <img class="icone-redes-sociais" src="facebook.png" alt="facebook">
        </div>
        <div class="estudante-div">
           <img class="estudante-foto" src="sem foto.png" alt="Breno da silva Rodrigues">
-          <h3 class="estudante-nome">Breno da silva Rodrigues</h3>
+          <h3 class="estudante-nome">Jhon Alan Oliveira De Paulo</h3>
           <img class="icone-redes-sociais" src="instagram.png" alt="instagram">
           <img class="icone-redes-sociais" src="facebook.png" alt="facebook">
        </div>
        <div class="estudante-div">
           <img class="estudante-foto" src="sem foto.png" alt="Diogo Henrique Da Silva Muchau">
-          <h3 class="estudante-nome">Diogo Henrique Da Silva Muchau</h3>
+          <h3 class="estudante-nome">Marcia Assis</h3>
           <img class="icone-redes-sociais" src="instagram.png" alt="instagram">
           <img class="icone-redes-sociais" src="facebook.png" alt="facebook">
        </div>
        <div class="estudante-div">
           <img class="estudante-foto" src="sem foto.png" alt="">
-          <h3 class="estudante-nome">Eduardo Geronimo Dos Santos</h3>
+          <h3 class="estudante-nome">Maristela Faust Machado</h3>
           <img class="icone-redes-sociais" src="instagram.png" alt="instagram">
           <img class="icone-redes-sociais" src="facebook.png" alt="facebook">
        </div>
        <div class="estudante-div">
           <img class="estudante-foto" src="sem foto.png" alt="">
-          <h3 class="estudante-nome">Erick Marlay Barroso De Jesus</h3>
+          <h3 class="estudante-nome">Melissa Inacio</h3>
           <img class="icone-redes-sociais" src="instagram.png" alt="instagram">
           <img class="icone-redes-sociais" src="facebook.png" alt="facebook">
        </div>
        <div class="estudante-div">
          <img class="estudante-foto" src="sem foto.png" alt="">
-          <h3 class="estudante-nome">Fernanda Fortinni Palu</h3>
+          <h3 class="estudante-nome">Nicolau Shigunov</h3>
           <img class="icone-redes-sociais" src="instagram.png" alt="instagram">
           <img class="icone-redes-sociais" src="facebook.png" alt="facebook">
        </div>
        <div class="estudante-div">
           <img class="estudante-foto" src="sem foto.png" alt="">
-          <h3 class="estudante-nome">Gabriel Viebrantz Souza</h3>
+          <h3 class="estudante-nome">Patricia Santos</h3>
           <img class="icone-redes-sociais" src="instagram.png" alt="instagram">
           <img class="icone-redes-sociais" src="facebook.png" alt="facebook">
        </div>
        <div class="estudante-div">
           <img class="estudante-foto" src="sem foto.png" alt="">
-          <h3 class="estudante-nome">Gabrieli Cearense De Andrade</h3>
+          <h3 class="estudante-nome">Reinoldo Hey</h3>
           <img class="icone-redes-sociais" src="instagram.png" alt="instagram">
           <img class="icone-redes-sociais" src="facebook.png" alt="facebook">
        </div>
        <div class="estudante-div">
           <img class="estudante-foto" src="sem foto.png" alt="">
-          <h3 class="estudante-nome">Gustavo Lorenzi</h3>
-          <img class="icone-redes-sociais" src="instagram.png" alt="instagram">
-          <img class="icone-redes-sociais" src="facebook.png" alt="facebook">
-       </div>
-       <div class="estudante-div">
-          <img class="estudante-foto" src="sem foto.png" alt="">
-          <h3 class="estudante-nome">Heitor Martins Da Silveira</h3>
+          <h3 class="estudante-nome">Yuri Cesar Hilgenstiler</h3>
           <img class="icone-redes-sociais" src="instagram.png" alt="instagram">
           <img class="icone-redes-sociais" src="facebook.png" alt="facebook">
        </div>
@@ -110,7 +104,7 @@
        
        <div class="mapa">
           <img class="imagem-rodape" src="mapa.png" alt="">
-         <a class="link" href="https://www.google.com.br/maps/search/Endere%C3%A7o:+R.+Dilermando+Pereira+de+Telefone:+(41)+3349-8653,+120+-+Pinheirinho,+Curitiba+-+PR,+81870-070/@-25.530428,-49.2927409,17z/data=!3m1!4b1?entry=ttu" target="_blank"><li class="escrita-roda-pe">Endereço: R. Dilermando Pereira de Telefone: (41) 3349-8653, 120 - Pinheirinho, Curitiba - PR, 81870-070</li></a>
+         <a class="link" href="https://www.google.com.br/maps/place/Col%C3%A9gio+Estadual+La+Salle/@-25.5322175,-49.2933434,17z/data=!3m1!4b1!4m6!3m5!1s0x94dcfc87bb378ec7:0xdb3f3ff1283b215!8m2!3d-25.5322205!4d-49.2917675!16s%2Fg%2F1tf66mln?entry=ttu" target="_blank"><li class="escrita-roda-pe">Endereço: R. Dilermando Pereira de Telefone: (41) 3349-8653, 120 - Pinheirinho, Curitiba - PR, 81870-070</li></a>
        </div>
        <div class="Telefone">
          <img class="imagem-rodape" src="telefone.png" alt="">
