--- a/alunos/index.html
+++ b/alunos/index.html
@@ -10,8 +10,8 @@
    <header class="cabeçalho">
       <img class="cabeçalho-imagem" src="la salle .png" alt="la salle">   
    <ul>
-      <a href="file:///C:/Users/Jo%C3%A3o%20Pedro/Downloads/escola/2D2024-main/index.html"><li class="lista">Menu</li></a>
-      <a href="file:///C:/Users/Jo%C3%A3o%20Pedro/Downloads/escola/2D2024-main/Professores/index.html"><li class="lista">Professores</li></a>
+      <a href="file:///tmp/guest-s4ttkj/Downloads/SIte-Escola-main/index.html"><li class="lista">Menu</li></a>
+      <a href="file:///tmp/guest-s4ttkj/Downloads/SIte-Escola-main/Professores/index.html"><li class="lista">Professores</li></a>
    </ul>
    </header>
 
@@ -217,7 +217,7 @@
        
        <div class="mapa">
           <img class="imagem-rodape" src="mapa.png" alt="">
-         <a class="link" href="https://www.google.com.br/maps/search/Endere%C3%A7o:+R.+Dilermando+Pereira+de+Telefone:+(41)+3349-8653,+120+-+Pinheirinho,+Curitiba+-+PR,+81870-070/@-25.530428,-49.2927409,17z/data=!3m1!4b1?entry=ttu" target="_blank"><li class="escrita-roda-pe">Endereço: R. Dilermando Pereira de Telefone: (41) 3349-8653, 120 - Pinheirinho, Curitiba - PR, 81870-070</li></a>
+         <a class="link" href="https://www.google.com.br/maps/place/Col%C3%A9gio+Estadual+La+Salle/@-25.5322175,-49.2933434,17z/data=!3m1!4b1!4m6!3m5!1s0x94dcfc87bb378ec7:0xdb3f3ff1283b215!8m2!3d-25.5322205!4d-49.2917675!16s%2Fg%2F1tf66mln?entry=ttu" target="_blank"><li class="escrita-roda-pe">Endereço: R. Dilermando Pereira de Telefone: (41) 3349-8653, 120 - Pinheirinho, Curitiba - PR, 81870-070</li></a>
        </div>
        <div class="Telefone">
          <img class="imagem-rodape" src="telefone.png" alt="">
